--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "{{projectName}}",
+  "sideEffects": [
+    "*.css"
+  ],
   "version": "1.0.0",
   "description": "{{desc}}",
   "main": "./src/index.js",
@@ -40,14 +43,14 @@
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^3.2.0",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "@music/sentry-webpack-plugin": "^2.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "@music/polyfill-candy-webpack-plugin": "^0.1.8",
-    "postcss-cli": "^7.1.0",
+    "@music/polyfill-candy-webpack-plugin": "^0.2.0",
+    "postcss-functions": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "pre-commit": "^1.2.2",
     "precss": "^4.0.0",
@@ -62,10 +65,11 @@
     "react-dom": "^16.13.1",
     "prop-types": "^15.7.2",
     "classnames": "^2.2.6",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "query-string": "^5.0.1",
     "core-js": "^3.6.4",
     "redux": "^4.0.1",
+    "react-redux": "^7.2.0",
     "lodash-es": "^4.17.15",
     "redux-promise-middleware": "^5.1.1"
   }
