--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-functions": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "pre-commit": "^1.2.2",
+    "npm-run-all": "^4.1.5",
     "precss": "^4.0.0",
     "style-loader": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
