--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "module": "./es/index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.client.js --mode development --colors --progress",
-    "build": "webpack --config ./webpack-client.js --mode production --colors --progress",
+    "build": "webpack --config ./webpack.client.js --mode production --colors --progress",
+    "analysis": "webpack --config ./webpack.client.js --mode production --colors --progress --env.analysis",
     "lint": "run-p lint:*",
     "lint:js": "elint lint es \"**/*.js\" \"**/*.jsx\"",
     "lint:css": "elint lint style \"**/*.css\" \"**/*.less\"",
@@ -58,6 +59,7 @@
     "style-loader": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
