--- a/package.json
+++ b/package.json
@@ -33,35 +33,34 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "clean-webpack-plugin": "^2.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-harddisk-plugin": "1.0.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "style-loader": "^1.1.3",
+    "css-loader": "^3.4.2",
+    "autoprefixer": "^9.7.5",
+    "precss": "^4.0.0",
+    "postcss-functions": "^3.0.0",
+    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "babel-loader": "^8.1.0",
+    "@music/polyfill-candy-webpack-plugin": "^0.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "file-loader": "^2.0.0",
+    "pre-commit": "^1.2.2",
+    "npm-run-all": "^4.1.5",
     {{#if elint}}
     "elint": "^1.11.1",
     "@music/elint-preset-base": "^1.0.13",
     {{/if}}
-    "autoprefixer": "^9.7.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "file-loader": "^2.0.0",
-    "clean-webpack-plugin": "^2.0.2",
-    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-harddisk-plugin": "1.0.1",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "@music/sentry-webpack-plugin": "^2.0.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "@music/polyfill-candy-webpack-plugin": "^0.2.0",
-    "postcss-functions": "^3.0.0",
-    "postcss-loader": "^3.0.0",
-    "pre-commit": "^1.2.2",
-    "npm-run-all": "^4.1.5",
-    "precss": "^4.0.0",
-    "style-loader": "^1.1.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.42.1",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "react": "^16.13.1",
