--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "{{projectName}}",
-  "sideEffects": [
-    "*.css"
-  ],
+  "name": "<$=projectName$>",
   "version": "1.0.0",
-  "description": "{{desc}}",
+  "description": "",
   "main": "./src/index.js",
   "module": "./es/index.js",
   "scripts": {
@@ -31,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-typescript": "^7.12.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "webpack": "^4.42.1",
@@ -41,26 +39,24 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-inline-source-plugin": "0.0.10",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "style-loader": "^1.1.3",
     "css-loader": "^3.4.2",
-    "autoprefixer": "^9.7.5",
-    "precss": "^4.0.0",
     "postcss-functions": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "babel-loader": "^8.1.0",
-    "@music/polyfill-candy-webpack-plugin": "^0.2.0",
+    "polyfill-candy-webpack-plugin": "^0.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "file-loader": "^2.0.0",
     "pre-commit": "^1.2.2",
     "npm-run-all": "^4.1.5",
-    {{#if elint}}
-    "elint": "^1.11.1",
-    "@music/elint-preset-base": "^1.0.13",
-    {{/if}}
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0"
+    <$ if (typeof elint !=='undefined' && elint) { $>
+    "lintall-cli": "^0.1.2",
+    "lintall-preset-base": "^0.0.4",
+    <$ } $>
   },
   "dependencies": {
     "react": "^16.13.1",
