--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "npm-run-all": "^4.1.5",
     <$ if (typeof elint !=='undefined' && elint) { $>
     "lintall-cli": "^0.1.2",
-    "lintall-preset-base": "^0.0.4",
+    "lintall-preset-base": "^0.0.4"
     <$ } $>
   },
   "dependencies": {
